# Semicon_Anomal

./: README.md
Final_Project/: AlbertMain.py  AlbertMainDist.py  gpt_main.py  kill.sh  llama_main.py  pyproject.toml  run.sh  test.py
Final_Project/albert/: tokenization.py
Final_Project/config/: config.py
Final_Project/ctokenizer_30/: added_tokens.json  tokenizer_config.json  vocab.txt
Final_Project/ctokenizer_32/: added_tokens.json  tokenizer_config.json  vocab.txt
Final_Project/ctokenizer_test/: vocab.txt
Final_Project/data/: clustering.py  data_handler.py
Final_Project/data/utils/: DataHandler.py
Final_Project/dataloader/: CustomDataset.py
Final_Project/dataset_v2.6/: ex_dataset.csv  ex_dataset_8.csv
Final_Project/eval/: __init__.py  evaluation.py
Final_Project/model/: AlbertTest.py  AlbertTrainer.py  AlbertTrainerDist.py  CustomAlbert.py  __init__.py  gpt.py  llama.py
Final_Project/result/: adamW_m2_v0_30_result.csv  adamW_m2_v0_32_result.csv  gpt_few_result.csv  gpt_few_result_ansi.csv  gpt_zero_result.csv  gpt_zero_result_ansi.csv  llama3_zero_result.csv  model_result.txt  payload.txt
Final_Project/tokenizer/: CustomTokenizer.py
Final_Project/utils/: DataHandler.py
Pre_Smoker/: PreSmoker.ipynb
Pre_Smoker/result/: preSmoke_stacking.csv  preSmoke_xgb.csv  submission_smoking.csv
Recover_Label/: gte_large_news_colab.ipynb  llama_2_In_Context_Learning.ipynb  llama_2_news_colab.ipynb
Recover_Label/data/: data-00000-of-00001.arrow  ft_data.csv  state.json  sub_umap.csv  tf_data.json
Semicon_Anomal/: submission.csv
(+1 files in other folders)
